[gd_scene load_steps=8 format=3 uid="uid://ct2ylfl8pdkam"]

[ext_resource type="Script" path="res://curse_casting/Scripts/curse_slider.gd" id="1_pqeds"]
[ext_resource type="Texture2D" uid="uid://dsmiy768q1njp" path="res://assets/curse_casting/TemporarySliderStart.png" id="2_1op18"]
[ext_resource type="Texture2D" uid="uid://8ywx3sas5083" path="res://assets/curse_casting/TemporaryButton.png" id="2_782t3"]
[ext_resource type="Texture2D" uid="uid://cmylrgyh5jpdd" path="res://assets/curse_casting/TemporarySliderStartHover.png" id="3_j3gtp"]
[ext_resource type="Texture2D" uid="uid://cifhbvrknb7fu" path="res://assets/curse_casting/TemporaryButtonPressed.png" id="3_rcgjr"]
[ext_resource type="Texture2D" uid="uid://b12gm1iu31eqq" path="res://assets/curse_casting/TemporarySliderStartPressed.png" id="4_n5awy"]

[sub_resource type="Curve2D" id="Curve2D_dtywo"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 360, 451, -216.951, 6.72717, 216.951, -6.72717, 495, 155, -205.458, 16.7299, 205.458, -16.7299, 853, 376)
}
point_count = 3

[node name="CurseSlider" type="Path2D"]
curve = SubResource("Curve2D_dtywo")
script = ExtResource("1_pqeds")

[node name="Line2D" type="Line2D" parent="."]
width = 100.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D2" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 0, 0)
width = 5.0
default_color = Color(1, 0, 1, 1)

[node name="StartZone" type="TextureButton" parent="."]
visible = false
offset_right = 550.0
offset_bottom = 548.0
keep_pressed_outside = true
texture_normal = ExtResource("2_1op18")
texture_pressed = ExtResource("4_n5awy")
texture_hover = ExtResource("3_j3gtp")

[node name="EndZone" type="TextureButton" parent="."]
visible = false
offset_right = 550.0
offset_bottom = 548.0
texture_normal = ExtResource("2_782t3")
texture_hover = ExtResource("3_rcgjr")
